# TreeGrad2

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg  treegrad-perf-classification.csv
.github/workflows/: unit_tests.yml
benchmark/: runner.py
scratch/: ebm_cat_tf.py  ebm_model_debugging.py  ebm_tf.py  lgb_tf.py
tests/: test_treegrad.py
treegrad/: treegrad.py  utils_interpret.py  utils_lgb.py
